Swagger-UI/http-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: swagger-ui-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: example.io
    http:
      paths:
      - path: /
        backend:
          serviceName: swagger-ui
          servicePort: 80
