Swagger-UI/https-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: swagger-ui-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: swagger-ui
spec:
  tls:
  - hosts:
    - example.io
    secretName: swagger-ui
  rules:
  - host: example.io
    http:
      paths:
      - path: /
        backend:
          serviceName: swagger-ui
          servicePort: 80
